--- a/assets/docs/style.css
+++ b/assets/docs/style.css
@@ -13,24 +13,24 @@ nav{
     margin-right: 20px;
 }
 #navbarNavDropdown a:hover{
-    color: blueviolet;
+    color: royalblue;
 }
 #brand_maran{
     font-weight: bold;
     color:aliceblue;
-    text-shadow: 0px 0px 3px blueviolet,0px 0px 5px blueviolet,0px 0px 10px blueviolet;
+    text-shadow: 0px 0px 5px royalblue,0px 0px 10px royalblue,0px 0px 15px royalblue;
+
 }
 .nav-link:hover{
-    border-bottom: 1px solid blueviolet;
-    text-shadow: 0px 0px 1px blueviolet,0px 0px 2px blueviolet,0px 0px 3px blueviolet;
+    border-bottom: 1px solid royalblue;
 }
 .image-text {
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 67%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    color: blueviolet;
+    color: royalblue;
     font-size: large;
   }
   .image-text p{
@@ -66,3 +66,10 @@ nav{
   }
 
 
+.quote p{
+  border: 1px solid royalblue;
+  color: black;
+  padding: 16px;
+  text-align: center;
+  border-radius: 10px;
+}
